[package]
name = "financial-chs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "derive",
  "macros",
  "chrono",
  "json",
] }
tokio = { version = "1.43.0", features = ["full"] }
